Fix most of bug 332922 and remove the equivalent deprecated nsStyle* APIs.