mozilla/content/html/content/src/nsHTMLImageElement.cpp
@@ -348,8 +348,9 @@ nsHTMLImageElement::GetWidthHeight()
     // mComputedSize.....
     size = frame->GetSize();
 
-    nsMargin margin;
-    frame->CalcBorderPadding(margin);
+    nsMargin margin(0,0,0,0);
+    margin += frame->GetUsedPadding();
+    margin += frame->GetUsedBorder();
 
     size.height -= margin.top + margin.bottom;
     size.width -= margin.left + margin.right;
