mozilla/layout/forms/nsGfxCheckboxControlFrame.cpp
@@ -217,7 +217,8 @@ nsGfxCheckboxControlFrame::PaintCheckBox(nsIRenderingContext& aRenderingContext,
   // REVIEW: moved the mAppearance test out so we avoid constructing
   // a display item if it's not needed
   nsMargin borderPadding(0,0,0,0);
-  CalcBorderPadding(borderPadding);
+  borderPadding += GetUsedBorder();
+  borderPadding += GetUsedPadding();
 
   nsRect checkRect(aPt, mRect.Size());
   checkRect.Deflate(borderPadding);
