mozilla/layout/generic/nsHTMLContainerFrame.cpp
@@ -205,9 +205,10 @@ nsHTMLContainerFrame::PaintTextDecorationLine(
                    nscoord aAscent, 
                    nscoord aSize) 
 {
-  nsMargin bp;
+  nsMargin bp(0,0,0,0);
   NS_ASSERTION(!aLine, "Should not have passed a linebox to a non-block frame");
-  CalcBorderPadding(bp);
+  bp += GetUsedBorder();
+  bp += GetUsedPadding();
   PRIntn skip = GetSkipSides();
   NS_FOR_CSS_SIDES(side) {
     if (skip & (1 << side)) {
